stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: #e8e8e8;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#background {
  background-color: #454545;
  border-radius: 1rem;
  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
}

#screen {
  width: 16rem;
  margin: 1.5rem;
  height: 5rem;
  background-color: #878787;
  border-radius: 1rem;
  color: #e8e8e8;
  text-align: right;
  display: flex;
  align-items: center;
  justify-content: right;
  padding: 1.5rem;
}

#button-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  margin: 2rem 1.5rem;
  grid-gap: 0.5rem;
}

#zero {
  grid-area: 5 / 1 / span 1 / span 2;
}

button {
  border-radius: 2rem;
  border-style: none;
  padding: 0.5rem;
  background-color: #878787;
  color: #e8e8e8;
  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
}

.orange {
  background-color: rgb(245, 148, 12);
}

.gray {
  background-color: rgb(100, 100, 100);
}

button,
#screen {
  font-family: 'Roboto', sans-serif;
  font-size: x-large;
}

button:hover {
  cursor: pointer;
  background-color: rgb(100, 100, 100);
}

.gray:hover {
  background-color: rgb(90, 90, 90);
}

.orange:hover {
  background-color: rgb(219, 133, 11);
}

